--- a/public/views/user_personage_manager.html
+++ b/public/views/user_personage_manager.html
@@ -174,7 +174,7 @@
                     <a href="javascript: void(0);" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
                         <span class="user-name">Игрок: <strong>{{player.name}}</strong></span>
                         <span class="avatar" href="profile.html">
-                        <img src="/assets/common/img/temp/avatars/4.jpg" alt="Alternative text to the image">
+                        <img src="/assets/common/img/temp/avatars/4.jpguser_personage_manager.html?id=4" alt="Alternative text to the image">
                     </span>
                     </a>
                     <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="" role="menu">
