--- a/public/views/flaws/flaw_css/flaw_man.css
+++ b/public/views/flaws/flaw_css/flaw_man.css
@@ -14,6 +14,10 @@
     padding: 25px 0 0;
 }
 
+.margin-bottom-50 .panel-heading h2 {
+    margin: 25px 0 0;
+}
+
 .margin-bottom-50 .table-hover {
     margin-top: 25px !important;
 } 
