--- a/public/views/flaws/flaw_manager.html
+++ b/public/views/flaws/flaw_manager.html
@@ -227,9 +227,15 @@
             </div>
         </div>
         <div class="panel-body">
+          
            <div class="row">
                 <div class="col-lg-12">
                     <div class="margin-bottom-50 col-lg-offset-1 col-lg-10 col-md-12">
+                        <div class="panel-heading">
+                            <h2>
+                                <a href="javascript: void(0);" class="pull-right btn btn-primary">Добавить запись</a>
+                            Недостатки</h2>
+                        </div>
                         <table class="table table-hover nowrap" id="example1" width="100%">
                            <!-- Nav Head Table -->
                             <thead>
