--- a/public/views/flaws/flaw_manager.html
+++ b/public/views/flaws/flaw_manager.html
@@ -233,7 +233,66 @@
                     <div class="margin-bottom-50 col-lg-offset-1 col-lg-10 col-md-12">
                         <div class="panel-heading">
                             <h2>
-                                <a href="javascript: void(0);" class="pull-right btn btn-primary">Добавить запись</a>
+                                <a href="javascript: void(0);" class="pull-right btn btn-primary" data-toggle="modal" data-target="#example2">Добавить запись</a>
+                                
+                                <div style="display: none;" class="modal fade modal-size-large" id="example2" tabindex="-1" role="dialog" aria-labelledby="" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Закрыть">
+                                    <span aria-hidden="true">×</span>
+                                </button>
+                                <h4 class="modal-title" id="myModalLabel">Добавить запись</h4>
+                            </div>
+                            <div class="modal-body">
+                                <!-- Добавить недостаток -->
+                       <form>
+                        <div class="form-group">
+                          <label for="formGroupExampleInput">Название недостатка:</label>
+                          <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Морская болезнь">
+                        </div>
+                        <div class="form-group">
+                          <label for="formGroupExampleInput2">Стоимость:</label>
+                          <input type="text" class="form-control bfh-number" data-min="-1000" data-max="1000" value="5">
+                        </div>
+                        <h5>Неотключаемый</h5>
+                        <div class="form-group">
+                          <label for="formGroupExampleInput2">Описание:</label>
+                          <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Описание здесь">
+                        </div>
+                        <div class="form-group">
+                          <label for="formGroupExampleInput2">Бонус на действия:</label>
+                          <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Бонус">
+                        </div>
+                    </form>
+                            </div>
+                            <div class="modal-footer">
+                                    <button type="button" class="btn" data-dismiss="modal">Закрыть</button>
+                                <button type="button" class="btn btn-primary">Добавить</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                                
+                                
+                                
+                                
+                                
+                                
+                                
+                                
+                                
+                                
+                                
+                                
+                                
+                                
+                                
+                                
+                                
+                                
+                                
+                                
                             Недостатки</h2>
                         </div>
                         <table class="table table-hover nowrap" id="example1" width="100%">
