--- a/public/views/flaws/flaw_manager.html
+++ b/public/views/flaws/flaw_manager.html
@@ -99,6 +99,7 @@
     <!-- Clean UI Scripts -->
     <script src="/assets/common/js/common.js"></script>
     <script src="/assets/common/js/demo.temp.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.10/ngStorage.min.js"></script>
     <script src="../../views/permissions/permissions.js"></script>
     <script src="../../views/personage_manager.js"></script>
