fix responsive tabs

--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -248,19 +248,19 @@
                 <div class="nav-tabs-horizontal">
                     <ul class="nav nav-tabs" role="tablist">
                         <li class="nav-item">
-                            <a class="nav-link active" href="javascript: void(0);" data-toggle="tab"
+                            <a class="nav-link my_tabs active" href="javascript: void(0);" data-toggle="tab"
                                data-target="#inherents" role="tab">Врожденки</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="javascript: void(0);" data-toggle="tab" data-target="#attr"
+                            <a class="nav-link my_tabs" href="javascript: void(0);" data-toggle="tab" data-target="#attr"
                                role="tab">Атрибуты</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="javascript: void(0);" data-toggle="tab" data-target="#sk"
+                            <a class="nav-link my_tabs" href="javascript: void(0);" data-toggle="tab" data-target="#sk"
                                role="tab">Навыки</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="javascript: void(0);" data-toggle="tab" data-target="#adv"
+                            <a class="nav-link my_tabs" href="javascript: void(0);" data-toggle="tab" data-target="#adv"
                                role="tab" ng-click="getPersonageMerits()">Особенности</a>
                         </li>
                     </ul>
@@ -306,11 +306,11 @@
                         <div id="sk" class="tab-pane" role="tabpanel">
                             <ul class="nav nav-tabs" role="tablist">
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="javascript: void(0);" data-toggle="tab"
+                                    <a class="nav-link my_tabs active" href="javascript: void(0);" data-toggle="tab"
                                        data-target="#attached" role="tab">Прикрепленные</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="javascript: void(0);" data-toggle="tab"
+                                    <a class="nav-link my_tabs" href="javascript: void(0);" data-toggle="tab"
                                        data-target="#trigger" role="tab" ng-click="getPersonageTriggerSkills()">Тригерные</a>
                                 </li>
                             </ul>
@@ -478,11 +478,11 @@
                         <div id="adv" class="tab-pane" role="tabpanel">
                             <ul class="nav nav-tabs" role="tablist">
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="javascript: void(0);" data-toggle="tab"
+                                    <a class="nav-link my_tabs active" href="javascript: void(0);" data-toggle="tab"
                                        data-target="#merits" role="tab">Достоинства</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="javascript: void(0);" data-toggle="tab"
+                                    <a class="nav-link my_tabs" href="javascript: void(0);" data-toggle="tab"
                                        data-target="#flaws" role="tab" ng-click="getPersonageFlaws()">Недостатки</a>
                                 </li>
                             </ul>
