--- a/public/assets/common/css/source/custom.css
+++ b/public/assets/common/css/source/custom.css
@@ -428,4 +428,15 @@ only screen and (max-width: 760px)  {
 		padding: 17px;
 		padding-left: 9px;
 	}
+
+	.nav-link.my_tabs{
+		padding:3px;
+		font-size:11px;
+		font-weight:lighter;
+		letter-spacing: 0;
+	}
+
+	.nav-link.my_tabs.active{
+		padding:4px;
+	}
 }
