--- a/public/views/personage_logic/view_personage.html
+++ b/public/views/personage_logic/view_personage.html
@@ -106,8 +106,8 @@
     <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-messages.min.js"></script>-->
 
     <!--<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.10/ngStorage.min.js"></script>
-    <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-2.0.0.js"></script>
+    <script src="/assets/vendors//ngStorage.min.js"></script>
+    <script src="/assets/vendors//ui-bootstrap-tpls-2.0.0.js"></script>
 
     <script src="/views/permissions/permissions.js"></script>
     <script src="view_personage.js"></script>
