--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -246,6 +246,7 @@
                     </div>
                 </h3>
                 <div class="panel-body">
+                    <button class="btn btn-rounded btn-info-outline filter-button hidden-md-up">Категория <i class="icmn-filter"></i></button>
                     <div class="table-responsive hidden-md-up" id="steps">
                         <table id="buttons" class="table">
                             <tr>
@@ -270,7 +271,7 @@
                             </tr>
                         </table>
                     </div>
-                    <div class="hidden-xs-down">
+                    <div class="hidden-xs-down hidden-sm-down">
                         <button class="btn margin-inline inherentsButton active">Врожденки</button>
                         <button class="btn margin-inline attributesButton">Атрибуты</button>
                         <button class="btn margin-inline attachedButton">Прикрепленные навыки</button>
@@ -318,6 +319,69 @@
                             </table>
                         </div>
                         <div id="attached" class="tab-pane" role="tabpanel" style="display: none">
+                            <div class="row hidden-xs-down hidden-sm-down">
+                                <div class="col-md-2">
+                                    <h2 style="padding-top: 10px; padding-left: 5px"><span class="label label-warning">Категории:</span></h2>
+                                </div>
+                                <div class="col-md-2">
+                                    <div class="checkbox">
+                                        <label>
+                                            <input name="magic" checked="" type="checkbox">
+                                             Магические
+                                        </label>
+                                    </div>
+                                    <br/>
+                                    <div class="checkbox">
+                                        <label>
+                                            <input name="magic" checked="" type="checkbox">
+                                            Социальные
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="col-md-2">
+                                    <div class="checkbox">
+                                        <label>
+                                            <input name="magic" checked="" type="checkbox">
+                                             Языки
+                                        </label>
+                                    </div>
+                                    <br/>
+                                    <div class="checkbox">
+                                        <label>
+                                            <input name="magic" checked="" type="checkbox">
+                                            Знания
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="col-md-2">
+                                    <div class="checkbox">
+                                        <label>
+                                            <input name="magic" checked="" type="checkbox">
+                                             Ремесла
+                                        </label>
+                                    </div>
+                                    <div class="checkbox">
+                                        <label>
+                                            <input name="magic" checked="" type="checkbox">
+                                            Профессиональные
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="col-md-2">
+                                    <div class="checkbox">
+                                        <label>
+                                            <input name="magic" checked="" type="checkbox">
+                                             По умолчанию
+                                        </label>
+                                    </div>
+                                    <div class="checkbox">
+                                        <label>
+                                            <input name="magic" checked="" type="checkbox">
+                                            Теоретические
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
                             <table class="table table-hover mobile">
                                 <thead class="mobile">
                                 <tr class="mobile">
