--- a/public/assets/common/css/source/custom.css
+++ b/public/assets/common/css/source/custom.css
@@ -402,6 +402,13 @@ only screen and (max-width: 760px),
 	td.mobile:nth-of-type(4):before { content: "Талант"; }
 	td.mobile:nth-of-type(5):before { content: "Учитель"; }
 	td.mobile:nth-of-type(6):before { content: "Удалить"; }
+
+	td.mobile.attached:nth-of-type(1):before { content: "Навык"; }
+	td.mobile.attached:nth-of-type(2):before { content: "Сложность"; }
+	td.mobile.attached:nth-of-type(3):before { content: "Теоретический"; }
+	td.mobile.attached:nth-of-type(4):before { content: "Кнопки"; }
+	td.mobile.attached:nth-of-type(5):before { content: "Значение"; }
+	td.mobile.attached:nth-of-type(6):before { content: "Действия"; }
 }
 
 @media
