--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -116,13 +116,24 @@
     <script src="attributes_controller.js"></script>
     <script src="../permissions/check_player_permissions.js"></script>
 </head>
-<body class="theme-default menu-top theme-blue mode-material" ng-app="personageApp">
+<body class="theme-default menu-left mode-material layout-boxed mode-box-shadow" ng-app="personageApp">
 <div class="boxed-container" ng-controller="permissionsController">
     <div ng-controller="personageController">
         <nav class="left-menu" left-menu ng-class="{'hidden-left-menu': hideLeftMenu}">
+            <div class="logo-container">
+                <a href="#" class="logo">
+                    <img src="/assets/common/img/logo.png"/>
+                </a>
+            </div>
 
             <div class="left-menu-inner scroll-pane">
                 <ul class="left-menu-list left-menu-list-root list-unstyled">
+                    <li class="left-menu-list-active">
+                        <a class="left-menu-link" href="/views/user_personage_manager.html">
+                            <i class="left-menu-link-icon fa fa-users"><!-- --></i>
+                            Персонажи
+                        </a>
+                    </li>
                     <li>
                         <a class="left-menu-link" href="/views/races/race_manager.html">
                             <i class="left-menu-link-icon fa fa-users"><!-- --></i>
@@ -326,14 +337,14 @@
                                 <div class="col-md-2">
                                     <div class="checkbox">
                                         <label>
-                                            <input name="magic" checked="" type="checkbox">
+                                            <input name="magic" type="checkbox" ng-model="filter.magic" ng-change="filterByCategory('магические', filter.magic)">
                                              Магические
                                         </label>
                                     </div>
                                     <br/>
                                     <div class="checkbox">
                                         <label>
-                                            <input name="magic" checked="" type="checkbox">
+                                            <input name="social" type="checkbox" ng-model="filter.social" ng-change="filterByCategory('социальные', filter.social)">
                                             Социальные
                                         </label>
                                     </div>
@@ -341,14 +352,14 @@
                                 <div class="col-md-2">
                                     <div class="checkbox">
                                         <label>
-                                            <input name="magic" checked="" type="checkbox">
+                                            <input name="languages" type="checkbox" ng-model="filter.language" ng-change="filterByCategory('языки', filter.language)">
                                              Языки
                                         </label>
                                     </div>
                                     <br/>
                                     <div class="checkbox">
                                         <label>
-                                            <input name="magic" checked="" type="checkbox">
+                                            <input name="knowledge" type="checkbox" ng-model="filter.knowledge" ng-change="filterByCategory('знания', filter.knowledge)">
                                             Знания
                                         </label>
                                     </div>
@@ -356,13 +367,13 @@
                                 <div class="col-md-2">
                                     <div class="checkbox">
                                         <label>
-                                            <input name="magic" checked="" type="checkbox">
+                                            <input name="crafts" type="checkbox" ng-model="filter.craft" ng-change="filterByCategory('ремесла', filter.craft)">
                                              Ремесла
                                         </label>
                                     </div>
                                     <div class="checkbox">
                                         <label>
-                                            <input name="magic" checked="" type="checkbox">
+                                            <input name="professional" type="checkbox" ng-model="filter.prof" ng-change="filterByCategory('профессиональные', filter.prof)">
                                             Профессиональные
                                         </label>
                                     </div>
@@ -370,13 +381,13 @@
                                 <div class="col-md-2">
                                     <div class="checkbox">
                                         <label>
-                                            <input name="magic" checked="" type="checkbox">
+                                            <input name="default" type="checkbox" ng-model="search.default_skill" ng-change="filterByDefault(search.default_skill)">
                                              По умолчанию
                                         </label>
                                     </div>
                                     <div class="checkbox">
                                         <label>
-                                            <input name="magic" checked="" type="checkbox">
+                                            <input name="theoretical" type="checkbox" ng-model="search.theoretical" ng-change="filterByTheoretical(search.theoretical)">
                                             Теоретические
                                         </label>
                                     </div>
@@ -386,6 +397,8 @@
                                 <thead class="mobile">
                                 <tr class="mobile">
                                     <th class="mobile">Навык</th>
+                                    <th class="mobile">Сложность</th>
+                                    <th class="mobile">Теоретический</th>
                                     <th class="mobile"></th>
                                     <th class="mobile">Значение</th>
                                     <th class="mobile"></th>
@@ -393,25 +406,43 @@
                                 </thead>
                                 <tbody class="mobile">
                                 <tr class="mobile"
-                                    ng-repeat="personageAttachedSkill in personageAttachedSkills">
-                                    <td class="text-right mobile">
+                                    ng-repeat="item in attachedSkillsMixed" ng-hide="filtered(item.attachedSkill)" ng-style="changeColor(item.personageAttachedSkill)">
+                                    <td class="text-right mobile attached">
                                         <div class="text-left">
-                                            {{personageAttachedSkill.AttachedSkill.name}}
+                                            {{item.attachedSkill.name}}
                                         </div>
                                     </td>
 
-                                    <td class="text-right mobile">
+                                    <td class="text-right mobile attached">
+                                        <div class="text-left" ng-if="item.attachedSkill.difficult">
+                                            Сложный
+                                        </div>
+                                        <div class="text-left" ng-if="!item.attachedSkill.difficult">
+                                            Простой
+                                        </div>
+                                    </td>
+
+                                    <td class="text-right mobile attached">
+                                        <div class="text-left" ng-if="item.attachedSkill.theoretical">
+                                            Да
+                                        </div>
+                                        <div class="text-left" ng-if="!item.attachedSkill.theoretical">
+                                            Нет
+                                        </div>
+                                    </td>
+
+                                    <td class="text-right mobile attached">
                                         <div class="btn-group btn-group-justified plus-minus-block">
                                             <div class="btn-group">
-                                                <button class="btn btn-rounded btn-sm btn-secondary"
-                                                        ng-click="decreaseAttachedSkill(personageAttachedSkill.AttachedSkill.id)"
+                                                <button class="btn btn-rounded btn-sm btn-secondary" ng-disabled="item.personageAttachedSkill == null"
+                                                        ng-click="decreaseAttachedSkill(item.personageAttachedSkill.AttachedSkill.id)"
                                                         type="button">
                                                     <i class="icmn-minus"></i>
                                                 </button>
                                             </div>
                                             <div class="btn-group">
-                                                <button class="btn btn-rounded btn-sm btn-primary"
-                                                        ng-click="increaseAttachedSkill(personageAttachedSkill.AttachedSkill.id)"
+                                                <button class="btn btn-rounded btn-sm btn-primary" ng-disabled="item.personageAttachedSkill == null"
+                                                        ng-click="increaseAttachedSkill(item.personageAttachedSkill.AttachedSkill.id)"
                                                         type="button">
                                                     <i class="icmn-plus"></i>
                                                 </button>
@@ -419,21 +450,31 @@
                                         </div>
                                     </td>
 
-                                    <td class="text-right mobile">
-                                        <div class="text-left">
-                                            {{personageAttachedSkill.value}}
+                                    <td class="text-right mobile attached">
+                                        <div class="text-left" ng-if="item.personageAttachedSkill != null">
+                                            {{item.personageAttachedSkill.value}}
+                                        </div>
+                                        <div class="text-left" ng-if="item.personageAttachedSkill == null">
+                                            -
                                         </div>
                                     </td>
 
-                                    <td class="text-right mobile">
+                                    <td class="text-right mobile attached">
                                         <div class="text-left">
-                                            <div ng-if="!personageAttachedSkill.AttachedSkill.default_skill">
+                                            <div ng-if="item.personageAttachedSkill != null && !item.personageAttachedSkill.AttachedSkill.default_skill">
                                                 <a class="link-underlined link-blue" href="javascript: void(0)"
-                                                   ng-click="deletePersonageAttachedSkill(personageAttachedSkill)">
+                                                   ng-click="deletePersonageAttachedSkill(item.personageAttachedSkill)">
                                                     Удалить
                                                 </a>
                                             </div>
-                                            <div ng-if="personageAttachedSkill.AttachedSkill.default_skill">
+
+                                            <div ng-if="item.personageAttachedSkill == null && !item.personageAttachedSkill.AttachedSkill.default_skill">
+                                                <a class="link-underlined link-blue" href="javascript: void(0)"
+                                                   ng-click="addPersonageAttachedSkill(item.attachedSkill)">
+                                                    Добавить
+                                                </a>
+                                            </div>
+                                            <div ng-if="item.personageAttachedSkill.AttachedSkill.default_skill">
                                                 По умолчанию
                                             </div>
                                         </div>
