fix bug with experience

--- a/public/views/user_personage_manager.html
+++ b/public/views/user_personage_manager.html
@@ -255,7 +255,7 @@
                                 <div class="form-group">
                                     <label class="form-label" for="experience">Очки опыта</label>
                                     <input class="form-control form-control-rounded" id="experience"
-                                           name="experience" min="0" type="number" required>
+                                           name="experience" ng-model="experience" min="0" type="number" required>
                                 </div>
                             </div>
                             <div class="col-lg-3">
